Move examples from manual to tutorial

--- a/web/tutorial.html
+++ b/web/tutorial.html
@@ -769,14 +769,44 @@ Warp [x=500,y=2000,dir=270]
 </section>
 
 
-      <h2>Further Reading</h2>
+      <a name="examples"><h2>Examples</h2></a>
+
+      <p>Listed below are example diagrams that approximately match <a href="https://www.iceskating.org.uk/skills">British Ice Skating's Skills
+      tests</a> and dance choreographies.  These examples can be a useful source of inspiration and tips/tricks for how
+      to get your own diagrams set how you want them.
 
       <ul>
-       <li>To see all of the available moves and their possible parameters, consult the <a href="manual.html">Reference
-           Manual</a>.</li>
-        <li>Browse the <a href="manual.html#examples">list of examples</a> to see sample diagrams (and how they were
-          generated).</li>
-       </ul>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/golden-skaters-waltz.skate">golden-skaters-waltz.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/novice-foxtrot.skate">novice-foxtrot.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/rhythm-blues.skate">rhythm-blues.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/riverside-rhumba.skate">riverside-rhumba.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills1-1.skate">skills1-1.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills1-2.skate">skills1-2.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills1-3.skate">skills1-3.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills2-1.skate">skills2-1.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills2-2.skate">skills2-2.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills2-3.skate">skills2-3.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills2-4.skate">skills2-4.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills2-5.skate">skills2-5.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills3-1.skate">skills3-1.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills3-2.skate">skills3-2.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills3-3.skate">skills3-3.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills3-4.skate">skills3-4.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills3-5.skate">skills3-5.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills4-1.skate">skills4-1.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills4-2.skate">skills4-2.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills4-3.skate">skills4-3.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills4-4.skate">skills4-4.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills4-5.skate">skills4-5.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills5-3.skate">skills5-3.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills6-3.skate">skills6-3.skate</a></li>
+      </ul>
+
+      <h2>Further Reading</h2>
+
+      <p>To see all of the available moves and their possible parameters, consult the <a href="manual.html">Reference
+           Manual</a>.
+
     </div>
 
     <footer>
