Add label[12] params to compound moves

--- a/web/manual.html
+++ b/web/manual.html
@@ -190,6 +190,12 @@ should hold for 2 beats.
           <li><b><code>transition-label</code></b>: Replacement transition label, used if non-empty
           (default <code>""</code>).
           </li>
+          <li><b><code>label1</code></b>: Replacement entry label, used if non-empty
+          (default <code>""</code>).
+          </li>
+          <li><b><code>label2</code></b>: Replacement exit label, used if non-empty
+          (default <code>""</code>).
+          </li>
           <li><b><code>label-offset</code></b>: Amount to scale label offsets by, as a percentage, or -1 to use global value
           (default <code>-1</code>).
           </li>
@@ -224,6 +230,12 @@ should hold for 2 beats.
           (default <code>""</code>).
           </li>
           <li><b><code>transition-label</code></b>: Replacement transition label, used if non-empty
+          (default <code>""</code>).
+          </li>
+          <li><b><code>label1</code></b>: Replacement entry label, used if non-empty
+          (default <code>""</code>).
+          </li>
+          <li><b><code>label2</code></b>: Replacement exit label, used if non-empty
           (default <code>""</code>).
           </li>
           <li><b><code>label-offset</code></b>: Amount to scale label offsets by, as a percentage, or -1 to use global value
@@ -262,6 +274,12 @@ should hold for 2 beats.
           <li><b><code>transition-label</code></b>: Replacement transition label, used if non-empty
           (default <code>""</code>).
           </li>
+          <li><b><code>label1</code></b>: Replacement entry label, used if non-empty
+          (default <code>""</code>).
+          </li>
+          <li><b><code>label2</code></b>: Replacement exit label, used if non-empty
+          (default <code>""</code>).
+          </li>
           <li><b><code>label-offset</code></b>: Amount to scale label offsets by, as a percentage, or -1 to use global value
           (default <code>-1</code>).
           </li>
@@ -296,6 +314,12 @@ should hold for 2 beats.
           (default <code>""</code>).
           </li>
           <li><b><code>transition-label</code></b>: Replacement transition label, used if non-empty
+          (default <code>""</code>).
+          </li>
+          <li><b><code>label1</code></b>: Replacement entry label, used if non-empty
+          (default <code>""</code>).
+          </li>
+          <li><b><code>label2</code></b>: Replacement exit label, used if non-empty
           (default <code>""</code>).
           </li>
           <li><b><code>label-offset</code></b>: Amount to scale label offsets by, as a percentage, or -1 to use global value
@@ -334,6 +358,12 @@ should hold for 2 beats.
           <li><b><code>transition-label</code></b>: Replacement transition label, used if non-empty
           (default <code>""</code>).
           </li>
+          <li><b><code>label1</code></b>: Replacement entry label, used if non-empty
+          (default <code>""</code>).
+          </li>
+          <li><b><code>label2</code></b>: Replacement exit label, used if non-empty
+          (default <code>""</code>).
+          </li>
           <li><b><code>label-offset</code></b>: Amount to scale label offsets by, as a percentage, or -1 to use global value
           (default <code>-1</code>).
           </li>
@@ -368,6 +398,12 @@ should hold for 2 beats.
           (default <code>""</code>).
           </li>
           <li><b><code>transition-label</code></b>: Replacement transition label, used if non-empty
+          (default <code>""</code>).
+          </li>
+          <li><b><code>label1</code></b>: Replacement entry label, used if non-empty
+          (default <code>""</code>).
+          </li>
+          <li><b><code>label2</code></b>: Replacement exit label, used if non-empty
           (default <code>""</code>).
           </li>
           <li><b><code>label-offset</code></b>: Amount to scale label offsets by, as a percentage, or -1 to use global value
@@ -406,6 +442,12 @@ should hold for 2 beats.
           <li><b><code>transition-label</code></b>: Replacement transition label, used if non-empty
           (default <code>""</code>).
           </li>
+          <li><b><code>label1</code></b>: Replacement entry label, used if non-empty
+          (default <code>""</code>).
+          </li>
+          <li><b><code>label2</code></b>: Replacement exit label, used if non-empty
+          (default <code>""</code>).
+          </li>
           <li><b><code>label-offset</code></b>: Amount to scale label offsets by, as a percentage, or -1 to use global value
           (default <code>-1</code>).
           </li>
@@ -442,6 +484,12 @@ should hold for 2 beats.
           <li><b><code>transition-label</code></b>: Replacement transition label, used if non-empty
           (default <code>""</code>).
           </li>
+          <li><b><code>label1</code></b>: Replacement entry label, used if non-empty
+          (default <code>""</code>).
+          </li>
+          <li><b><code>label2</code></b>: Replacement exit label, used if non-empty
+          (default <code>""</code>).
+          </li>
           <li><b><code>label-offset</code></b>: Amount to scale label offsets by, as a percentage, or -1 to use global value
           (default <code>-1</code>).
           </li>
@@ -476,6 +524,12 @@ should hold for 2 beats.
           (default <code>""</code>).
           </li>
           <li><b><code>transition-label</code></b>: Replacement transition label, used if non-empty
+          (default <code>""</code>).
+          </li>
+          <li><b><code>label1</code></b>: Replacement entry label, used if non-empty
+          (default <code>""</code>).
+          </li>
+          <li><b><code>label2</code></b>: Replacement exit label, used if non-empty
           (default <code>""</code>).
           </li>
           <li><b><code>label-offset</code></b>: Amount to scale label offsets by, as a percentage, or -1 to use global value
@@ -554,6 +608,12 @@ should hold for 2 beats.
           (default <code>""</code>).
           </li>
           <li><b><code>transition-label</code></b>: Replacement transition label, used if non-empty
+          (default <code>""</code>).
+          </li>
+          <li><b><code>label1</code></b>: Replacement entry label, used if non-empty
+          (default <code>""</code>).
+          </li>
+          <li><b><code>label2</code></b>: Replacement exit label, used if non-empty
           (default <code>""</code>).
           </li>
           <li><b><code>label-offset</code></b>: Amount to scale label offsets by, as a percentage, or -1 to use global value
