--- a/web/tutorial.html
+++ b/web/tutorial.html
@@ -863,7 +863,10 @@ Warp [x=500,y=2000,dir=270]
       <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills4-4.skate">skills4-4.skate</a></li>
       <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills4-5.skate">skills4-5.skate</a></li>
       <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills5-1.skate">skills5-1.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills5-2.skate">skills5-2.skate</a></li>
       <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills5-3.skate">skills5-3.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills5-4.skate">skills5-4.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills5-5.skate">skills5-5.skate</a></li>
       <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills6-3.skate">skills6-3.skate</a></li>
       </ul>
 
