--- a/web/tutorial.html
+++ b/web/tutorial.html
@@ -870,6 +870,7 @@ Warp [x=500,y=2000,dir=270]
       <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills6-1.skate">skills6-1.skate</a></li>
       <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills6-2.skate">skills6-2.skate</a></li>
       <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills6-3.skate">skills6-3.skate</a></li>
+      <li><a href="./?w=800px&h=1200px&edh=1100px&load=examples/skills6-5.skate">skills6-5.skate</a></li>
       </ul>
 
       <h2>Further Reading</h2>
