Fix download link on preview page

--- a/web/preview.html
+++ b/web/preview.html
@@ -17,7 +17,7 @@
         </tr>
         <tr>
           <td>
-          <a href="#" class="download">Download as SVG</a>
+          <a href="#" class="download">Save SVG</a>
           |
           <a href="#" class="edit">Edit</a>
           </td>
