Don't do file IO in mini editors
Commit 86532474cd12 ("Load/save to file") added file IO but didn't
allow for the mini editors in the tutorial page not including the
relevant controls.

--- a/web/tutorial.html
+++ b/web/tutorial.html
@@ -890,11 +890,11 @@ Warp [x=500,y=2000,dir=270]
     </footer>
   </body>
   <script type="module">
-    import {setup_editor, load_skate} from './skreate.js';
+    import {setup_mini_editor, load_skate} from './skreate.js';
     $( ".skreate" ).each(function(index) {
         let id = '#' + this.id;
         let text = this.dataset.skreate;
-        $(document).ready(function() { setup_editor($(id), false, text); });
+        $(document).ready(function() { setup_mini_editor($(id), false, text); });
     });
   </script>
 </html>
