Fix missing quotes in manual

--- a/web/manual.html
+++ b/web/manual.html
@@ -42,9 +42,9 @@
     <li>an <b><code>xf-</code></b> prefix indicates a cross in front</li>
     <li>an <b><code>xb-</code></b> prefix indicates a cross behind</li>
    </ul></li>
-  <li>An edge code, indicating the skating foot, direction, and edge.  For example, <a href="./?text="><b><code></code></b></a> indicates skating on
+  <li>An edge code, indicating the skating foot, direction, and edge.  For example, <a href="./?text=LBO"><b><code>LBO</code></b></a> indicates skating on
     the left foot, travelling backwards on an outside edge.</li>
-  <li>An optional suffix indicating a move, turn or foot change.  For example, <a href="./?text="><b><code></code></b></a> indicates a three-turn from
+  <li>An optional suffix indicating a move, turn or foot change.  For example, <a href="./?text=LFO3"><b><code>LFO3</code></b></a> indicates a three-turn from
     a left forward outside edge, transitioning to a left backward inside edge.</li>
   <li>Further optional suffices that adjust parameters for the move.  These can take two forms:<ul>
     <li>A collection of comma-separated <code>name=value</code> parameters enclosed in square brackets.  For example,
