manual: add alt attribute to images

--- a/web/manual.html
+++ b/web/manual.html
@@ -108,7 +108,7 @@ should hold for 2 beats.
       </td>
       <td>Curving edge</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=LFO"><img src="doc/LFO.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=LFO"><img src="doc/LFO.svg" height="150" alt="Edge"/></a></div>
       </td>
       <td>
         <ul>
@@ -141,7 +141,7 @@ should hold for 2 beats.
       </td>
       <td>Straight edge</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=LF"><img src="doc/LF.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=LF"><img src="doc/LF.svg" height="150" alt="Straight Edge"/></a></div>
       </td>
       <td>
         <ul>
@@ -164,7 +164,7 @@ should hold for 2 beats.
       </td>
       <td>Three turn</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=LFO3"><img src="doc/LFO3.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=LFO3"><img src="doc/LFO3.svg" height="150" alt="Three Turn"/></a></div>
       </td>
       <td>
         <ul>
@@ -206,7 +206,7 @@ should hold for 2 beats.
       </td>
       <td>Open mohawk</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=LFI-OpMo"><img src="doc/LFI-OpMo.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=LFI-OpMo"><img src="doc/LFI-OpMo.svg" height="150" alt="Open Mohawk"/></a></div>
       </td>
       <td>
         <ul>
@@ -248,7 +248,7 @@ should hold for 2 beats.
       </td>
       <td>Closed mohawk</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=RBO-ClMo"><img src="doc/RBO-ClMo.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=RBO-ClMo"><img src="doc/RBO-ClMo.svg" height="150" alt="Closed Mohawk"/></a></div>
       </td>
       <td>
         <ul>
@@ -290,7 +290,7 @@ should hold for 2 beats.
       </td>
       <td>Bracket turn</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=LFO-Br"><img src="doc/LFO-Br.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=LFO-Br"><img src="doc/LFO-Br.svg" height="150" alt="Bracket"/></a></div>
       </td>
       <td>
         <ul>
@@ -332,7 +332,7 @@ should hold for 2 beats.
       </td>
       <td>Rocker turn</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=LFO-Rk"><img src="doc/LFO-Rk.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=LFO-Rk"><img src="doc/LFO-Rk.svg" height="150" alt="Rocker"/></a></div>
       </td>
       <td>
         <ul>
@@ -374,7 +374,7 @@ should hold for 2 beats.
       </td>
       <td>Counter turn</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=LFO-Ctr"><img src="doc/LFO-Ctr.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=LFO-Ctr"><img src="doc/LFO-Ctr.svg" height="150" alt="Counter"/></a></div>
       </td>
       <td>
         <ul>
@@ -416,7 +416,7 @@ should hold for 2 beats.
       </td>
       <td>Open choctaw</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=LFI-OpCho"><img src="doc/LFI-OpCho.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=LFI-OpCho"><img src="doc/LFI-OpCho.svg" height="150" alt="Open Choctaw"/></a></div>
       </td>
       <td>
         <ul>
@@ -458,7 +458,7 @@ should hold for 2 beats.
       </td>
       <td>Closed choctaw</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=RBO-ClCho"><img src="doc/RBO-ClCho.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=RBO-ClCho"><img src="doc/RBO-ClCho.svg" height="150" alt="Closed Choctaw"/></a></div>
       </td>
       <td>
         <ul>
@@ -500,7 +500,7 @@ should hold for 2 beats.
       </td>
       <td>Change of edge</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=LFO-CoE"><img src="doc/LFO-CoE.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=LFO-CoE"><img src="doc/LFO-CoE.svg" height="150" alt="Change of Edge"/></a></div>
       </td>
       <td>
         <ul>
@@ -545,7 +545,7 @@ should hold for 2 beats.
       </td>
       <td>Twizzle</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=LFI-Tw1.5"><img src="doc/LFI-Tw1.5.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=LFI-Tw1.5"><img src="doc/LFI-Tw1.5.svg" height="150" alt="Twizzle"/></a></div>
       </td>
       <td>
         <ul>
@@ -584,7 +584,7 @@ should hold for 2 beats.
       </td>
       <td>Loop figure</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=RBI-Loop"><img src="doc/RBI-Loop.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=RBI-Loop"><img src="doc/RBI-Loop.svg" height="150" alt="Loop"/></a></div>
       </td>
       <td>
         <ul>
@@ -626,7 +626,7 @@ should hold for 2 beats.
       </td>
       <td>Hop</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=RB-Hop"><img src="doc/RB-Hop.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=RB-Hop"><img src="doc/RB-Hop.svg" height="150" alt="Hop"/></a></div>
       </td>
       <td>
         <ul>
@@ -648,7 +648,7 @@ should hold for 2 beats.
       </td>
       <td>Salchow jump</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=LBI-1S"><img src="doc/LBI-1S.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=LBI-1S"><img src="doc/LBI-1S.svg" height="150" alt="Salchow"/></a></div>
       </td>
       <td>
         <ul>
@@ -684,7 +684,7 @@ should hold for 2 beats.
       </td>
       <td>Toe Loop jump</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=RBO-1T"><img src="doc/RBO-1T.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=RBO-1T"><img src="doc/RBO-1T.svg" height="150" alt="Toe Loop"/></a></div>
       </td>
       <td>
         <ul>
@@ -720,7 +720,7 @@ should hold for 2 beats.
       </td>
       <td>Loop jump</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=RBO-1Lo"><img src="doc/RBO-1Lo.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=RBO-1Lo"><img src="doc/RBO-1Lo.svg" height="150" alt="Loop"/></a></div>
       </td>
       <td>
         <ul>
@@ -756,7 +756,7 @@ should hold for 2 beats.
       </td>
       <td>Flip jump</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=LBI-1F"><img src="doc/LBI-1F.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=LBI-1F"><img src="doc/LBI-1F.svg" height="150" alt="Flip"/></a></div>
       </td>
       <td>
         <ul>
@@ -792,7 +792,7 @@ should hold for 2 beats.
       </td>
       <td>Lutz jump</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=LBO-1Lz"><img src="doc/LBO-1Lz.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=LBO-1Lz"><img src="doc/LBO-1Lz.svg" height="150" alt="Lutz"/></a></div>
       </td>
       <td>
         <ul>
@@ -828,7 +828,7 @@ should hold for 2 beats.
       </td>
       <td>Axel jump</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=LFO-1A"><img src="doc/LFO-1A.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=LFO-1A"><img src="doc/LFO-1A.svg" height="150" alt="Axel"/></a></div>
       </td>
       <td>
         <ul>
@@ -912,7 +912,7 @@ should hold for 2 beats.
       </td>
       <td>Rink depiction</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=Rink"><img src="doc/Rink.svg" height="150"/></a></div>
+        <div class="example"><a href="./preview.html?text=Rink"><img src="doc/Rink.svg" height="150" alt="Rink"/></a></div>
       </td>
       <td>
         <ul>
