manual: escape spaces in HTML ids

--- a/web/manual.html
+++ b/web/manual.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en-GB">
 <head>
-  <meta charset='utf-8'>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" type="text/css" href="css/manual.css" media="screen" />
 
   <title>Skating Diagram Creator</title>
@@ -92,7 +93,7 @@ should hold for 2 beats.
 
 <a id="reference"/><h2>Move Reference</h2>
 
-<table>
+<table summary="Move reference">
   <thead>
     <tr>
       <th>Example</th>
@@ -135,7 +136,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Straight Edge"/><tr>
+    <a id="ref-Straight_Edge"/><tr>
       <td class="center">
         <b><code>LF</code></b>
       </td>
@@ -158,7 +159,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Three Turn"/><tr>
+    <a id="ref-Three_Turn"/><tr>
       <td class="center">
         <b><code>LFO3</code></b>
       </td>
@@ -200,7 +201,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Open Mohawk"/><tr>
+    <a id="ref-Open_Mohawk"/><tr>
       <td class="center">
         <b><code>LFI-OpMo</code></b>
       </td>
@@ -242,7 +243,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Closed Mohawk"/><tr>
+    <a id="ref-Closed_Mohawk"/><tr>
       <td class="center">
         <b><code>RBO-ClMo</code></b>
       </td>
@@ -410,7 +411,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Open Choctaw"/><tr>
+    <a id="ref-Open_Choctaw"/><tr>
       <td class="center">
         <b><code>LFI-OpCho</code></b>
       </td>
@@ -452,7 +453,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Closed Choctaw"/><tr>
+    <a id="ref-Closed_Choctaw"/><tr>
       <td class="center">
         <b><code>RBO-ClCho</code></b>
       </td>
@@ -494,7 +495,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Change of Edge"/><tr>
+    <a id="ref-Change_of_Edge"/><tr>
       <td class="center">
         <b><code>LFO-CoE</code></b>
       </td>
@@ -678,7 +679,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Toe Loop"/><tr>
+    <a id="ref-Toe_Loop"/><tr>
       <td class="center">
         <b><code>RBO-1T</code></b>
       </td>
