manual: fix incorrect anchor tag

--- a/web/manual.html
+++ b/web/manual.html
@@ -103,7 +103,7 @@ should hold for 2 beats.
     </tr>
   </thead>
   <tbody>
-    <a id="ref-Edge"/><tr>
+    <tr id="ref-Edge">
       <td class="center">
         <b><code>LFO</code></b>
       </td>
@@ -136,7 +136,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Straight_Edge"/><tr>
+    <tr id="ref-Straight_Edge">
       <td class="center">
         <b><code>LF</code></b>
       </td>
@@ -159,7 +159,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Three_Turn"/><tr>
+    <tr id="ref-Three_Turn">
       <td class="center">
         <b><code>LFO3</code></b>
       </td>
@@ -201,7 +201,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Open_Mohawk"/><tr>
+    <tr id="ref-Open_Mohawk">
       <td class="center">
         <b><code>LFI-OpMo</code></b>
       </td>
@@ -243,7 +243,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Closed_Mohawk"/><tr>
+    <tr id="ref-Closed_Mohawk">
       <td class="center">
         <b><code>RBO-ClMo</code></b>
       </td>
@@ -285,7 +285,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Bracket"/><tr>
+    <tr id="ref-Bracket">
       <td class="center">
         <b><code>LFO-Br</code></b>
       </td>
@@ -327,7 +327,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Rocker"/><tr>
+    <tr id="ref-Rocker">
       <td class="center">
         <b><code>LFO-Rk</code></b>
       </td>
@@ -369,7 +369,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Counter"/><tr>
+    <tr id="ref-Counter">
       <td class="center">
         <b><code>LFO-Ctr</code></b>
       </td>
@@ -411,7 +411,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Open_Choctaw"/><tr>
+    <tr id="ref-Open_Choctaw">
       <td class="center">
         <b><code>LFI-OpCho</code></b>
       </td>
@@ -453,7 +453,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Closed_Choctaw"/><tr>
+    <tr id="ref-Closed_Choctaw">
       <td class="center">
         <b><code>RBO-ClCho</code></b>
       </td>
@@ -495,7 +495,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Change_of_Edge"/><tr>
+    <tr id="ref-Change_of_Edge">
       <td class="center">
         <b><code>LFO-CoE</code></b>
       </td>
@@ -540,7 +540,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Twizzle"/><tr>
+    <tr id="ref-Twizzle">
       <td class="center">
         <b><code>LFI-Tw1.5</code></b>
       </td>
@@ -579,7 +579,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Loop"/><tr>
+    <tr id="ref-Loop">
       <td class="center">
         <b><code>RBI-Loop</code></b>
       </td>
@@ -621,7 +621,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Hop"/><tr>
+    <tr id="ref-Hop">
       <td class="center">
         <b><code>RB-Hop</code></b>
       </td>
@@ -643,7 +643,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Salchow"/><tr>
+    <tr id="ref-Salchow">
       <td class="center">
         <b><code>LBI-1S</code></b>
       </td>
@@ -679,7 +679,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Toe_Loop"/><tr>
+    <tr id="ref-Toe_Loop">
       <td class="center">
         <b><code>RBO-1T</code></b>
       </td>
@@ -715,7 +715,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Loop"/><tr>
+    <tr id="ref-Loop">
       <td class="center">
         <b><code>RBO-1Lo</code></b>
       </td>
@@ -751,7 +751,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Flip"/><tr>
+    <tr id="ref-Flip">
       <td class="center">
         <b><code>LBI-1F</code></b>
       </td>
@@ -787,7 +787,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Lutz"/><tr>
+    <tr id="ref-Lutz">
       <td class="center">
         <b><code>LBO-1Lz</code></b>
       </td>
@@ -823,7 +823,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Axel"/><tr>
+    <tr id="ref-Axel">
       <td class="center">
         <b><code>LFO-1A</code></b>
       </td>
@@ -859,7 +859,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Warp"/><tr>
+    <tr id="ref-Warp">
       <td class="center">
         <b><code>Warp[x&#x3D;100,y&#x3D;100,dir&#x3D;270]</code></b>
       </td>
@@ -883,7 +883,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Shift"/><tr>
+    <tr id="ref-Shift">
       <td class="center">
         <b><code>Shift[fwd&#x3D;50,side&#x3D;50,rotate&#x3D;270]</code></b>
       </td>
@@ -907,7 +907,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Rink"/><tr>
+    <tr id="ref-Rink">
       <td class="center">
         <b><code>Rink</code></b>
       </td>
@@ -947,7 +947,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Info"/><tr>
+    <tr id="ref-Info">
       <td class="center">
         <b><code>Info[markers&#x3D;true,grid&#x3D;100,move-bounds&#x3D;true]</code></b>
       </td>
@@ -989,7 +989,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Title"/><tr>
+    <tr id="ref-Title">
       <td class="center">
         <b><code>Title[text&#x3D;&quot;Waltz&quot;]</code></b>
       </td>
@@ -1013,7 +1013,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Text"/><tr>
+    <tr id="ref-Text">
       <td class="center">
         <b><code>Text[text&#x3D;&quot;Start&quot;,x&#x3D;500,y&#x3D;200]</code></b>
       </td>
@@ -1040,7 +1040,7 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <a id="ref-Label"/><tr>
+    <tr id="ref-Label">
       <td class="center">
         <b><code>Label[text&#x3D;&quot;CoE&quot;,fwd&#x3D;50,side&#x3D;20]</code></b>
       </td>
