--- a/web/manual.html
+++ b/web/manual.html
@@ -579,13 +579,13 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <tr id="ref-Loop">
+    <tr id="ref-Loop_figure">
       <td class="center">
         <b><code>RBI-Loop</code></b>
       </td>
       <td>Loop figure</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=RBI-Loop"><img src="doc/RBI-Loop.svg" height="150" alt="Loop"/></a></div>
+        <div class="example"><a href="./preview.html?text=RBI-Loop"><img src="doc/RBI-Loop.svg" height="150" alt="Loop figure"/></a></div>
       </td>
       <td>
         <ul>
@@ -715,13 +715,13 @@ should hold for 2 beats.
         </ul>
       </td>
     </tr>
-    <tr id="ref-Loop">
+    <tr id="ref-Loop_jump">
       <td class="center">
         <b><code>RBO-1Lo</code></b>
       </td>
       <td>Loop jump</td>
       <td class="center">
-        <div class="example"><a href="./preview.html?text=RBO-1Lo"><img src="doc/RBO-1Lo.svg" height="150" alt="Loop"/></a></div>
+        <div class="example"><a href="./preview.html?text=RBO-1Lo"><img src="doc/RBO-1Lo.svg" height="150" alt="Loop jump"/></a></div>
       </td>
       <td>
         <ul>
